--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 
   <!-- Container (About Section) -->
   <div class="w3-content w3-container w3-padding-64" id="about">
-    <h3 class="w3-center">ABOUT ME</h3>
-    <p class="w3-center"><em>Nice to meet you</em></p>
+    <h3 class="w3-center">ABOUT</h3>
+    <p class="w3-center"><em>Welcome to Blues</em></p>
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <p><b><i class="fa fa-user w3-margin-right"></i>첼시 FC
