--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
   <!-- 본인 인적사항 수정!!! -->
   <div class="w3-content w3-container w3-padding-64" id="contact">
     <h3 class="w3-center">OUR STADIUM</h3>
-    <p class="w3-center"><em>Blue Is The Colour</em></p>
+    <p class="w3-center"><em>The Pride of London</em></p>
 
     <div class="w3-row w3-padding-32 w3-section">
       <div class="w3-col m4 w3-container">
